<resources>
    <string name="app_name">TheNew20HourRule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_skill_progress_button_content_description">Share skill progress</string>
    <string name="edit_skill_button_content_description">edit skill details</string>
    <string name="delete_skill_button_skill_description">delete skill</string>
    <string name="skill_total_time_spent">%s hours</string>
    <string name="fab_desc_add_new_skill">Add new skill</string>
    <string name="tv_empty_list">No Skills Found, start working on one</string>
    <string name="et_new_skill_name_label">Skill Name</string>
    <string name="et_new_skill_goal_label">Final Goal</string>
    <string name="et_dialog_box_session_duration">How long will the session be? (in min)</string>
    <string name="et_dialog_box_session_objective">What will you do this session?</string>
    <string name="session_objective_not_set">Objective: Not Set</string>
    <string name="session_duration_not_set">Duration: Not Set</string>
    <string name="session_objective">Objective: %s</string>
    <string name="session_duration">Duration: %d (min)</string>
    <string name="menu_item_history">History</string>
    <string name="btn_text_stop">Stop</string>
    <string name="btn_text_start">Start</string>
    <string name="tv_no_history_text">No History Recorded, start some sessions</string>
    <string name="mi_order_by_duration">Order by Duration   &#8595;</string>
    <string name="mi_order_by_time">Order by Date Created   &#8595;</string>
    <string name="mi_order_reverse_by_duration">Order by Duration   &#8593;</string>
    <string name="mi_order_reverse_by_time">Order by Date Created   &#8593;</string>
    <string name="tv_end_goal">End Goal:</string>
    <string name="tv_start_time">00:00:00</string>
    <string name="btn_text_reset">Reset</string>
    <string name="tv_session_time_spent">%.1f (min)</string>
</resources>